# rqa-validator

./: .gitignore  README.md  config.py  dataset_requirements.md  main.py  pyproject.toml
.github/workflows/: build_translation_files.yml  pytest.yml  ruff.yml
locales/: il8n.py  readme.md  translations.md  update_files.sh
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/fr/LC_MESSAGES/: messages.mo
src/rqa_validator/: .env  config.py
src/rqa_validator/common/: expression_builder.py  file_export.py  list_matching.py  matching.py  schema_matching.py
src/rqa_validator/loaders/: base.py  base_excel_loader.py  excel_loader.py  helpers.py
src/rqa_validator/models/: base.py  base_dataset.py  base_dataset_schemas.py  config.py  default_dataset_schema.py  defaults.py  dynamic_model.py  jmmi.py  matching.py  preprocess.py  schema.py  test_model.py
src/rqa_validator/orchestrator/: validation_pipeline.py
src/rqa_validator/utils/: helpers.py  il8n.py  logging.py
src/rqa_validator/validators/: base.py  cleaning_log_validator.py  column_validators.py  config.py  data_helpers.py  data_validators.py  helpers.py  options.py  preprocess.py  schema_helpers.py  sheet_validators.py
src/rqa_validator/validators/data_validators/: __init__.py  cleaning_log_to_clean_validator.py  (+10 more)
src/tests/: conftest.py  helpers.py
src/tests/loader/: jmmi_invalid.xlsx  jmmi_invalid_fuzzy.xlsx  jmmi_valid.xlsx  jmmi_valid_fuzzy.xlsx  test_load_excel_file.py
src/tests/orchestrator/: test_orchestrator.py
src/tests/schema/: test_schema_columns.py  test_schema_sheets.py
(+31 files in other folders)
