[project]
name = "rqa-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.19.0",
    "polars>=1.39.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.9",
]

[tool.ruff]
exclude = [
"*.ipynb"
]
