[project]
name = "rqa-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.19.0",
    "polars>=1.39.3",
    "pydantic-settings>=2.13.1",    
    "thefuzz>=0.22.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.9",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
exclude = [
"*.ipynb"
]
[tool.ruff.lint]
select = ["UP", "E", "F", "I"]

[build-system]
requires = ["uv_build>=0.6.6,<0.7"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["."]
addopts = "--cov=src/rqa_validator --cov-report=term-missing"